--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,11 +13,11 @@ androidxRuntime = "1.6.8"
 androidxTestCore = "1.6.1"
 androidxTestRules = "1.6.1"
 androidxComposeUiTestAndroid = "1.6.8"
-gson = "2.10.1"
 hilt = "2.51.1"
 junit = "4.13.2"
 kotlin = "1.9.23"
 kotlinxCoroutines = "1.8.1"
+kotlinxSerialization = "1.6.3"
 ksp = "1.9.23-1.0.20"
 robolectric = "4.13"
 room = "2.6.1"
@@ -44,12 +44,12 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-ui-test-junit4-android = { group = "androidx.compose.ui", name = "ui-test-junit4-android", version.ref = "androidxComposeUiTestAndroid" }
 androidx-test-core = { group = "androidx.test", name = "core", version.ref = "androidxTestCore" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "androidxTestRules" }
-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
@@ -65,6 +65,7 @@ android-library = { id = "com.android.library", version.ref = "androidGradlePlug
 
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
 # Plugins defined by this project
@@ -75,3 +76,4 @@ afoil-android-hilt = { id = "afoil.android.hilt", version = "unspecified" }
 afoil-android-library = { id = "afoil.android.library", version = "unspecified" }
 afoil-android-library-compose = { id = "afoil.android.library.compose", version = "unspecified" }
 afoil-android-room = { id = "afoil.android.room", version = "unspecified" }
+afoil-kotlinx-serialization = { id = "afoil.kotlinx.serialization", version = "unspecified" }
