--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -30,6 +30,9 @@ jobs:
 
             - name: Build APK
               run: ./gradlew assembleDebug
+              env:
+                GITHUB_USERNAME: arch-dev
+                GITHUB_TOKEN: ${{ secrets.PKG_ACCESS_TOKEN }}
 
             - name: Upload APKs
               uses: actions/upload-artifact@v4
