--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -7,9 +7,9 @@ on:
 
 jobs:
     build_apk:
-        name: "Build APK"
+        name: Build APK
         runs-on: ubuntu-latest
-
+        if: ${{ !contains(join(github.event.commits.*.message, ' '), 'docs:') }}
         steps:
             - name: Checkout
               uses: actions/checkout@v4
